--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,14 @@ margin: 0 auto;
   border-radius: 5px;
 }
 
+#loginform p {
+  position: relative;
+  top: -8px;
+  text-align: center;
+  height: 3px;
+  color: red;
+}
+
 #loginform input {
   display: block;
   width: calc(100% - 20px);
