--- a/src/App.css
+++ b/src/App.css
@@ -176,3 +176,10 @@ img {
 .homeheader + .switchbuttons {
   margin-top: 0; /* Elimina el margen superior del contenedor de botones */
 }
+
+.alojamientos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1rem;
+  list-style-type: none;
+}
