--- a/src/App.css
+++ b/src/App.css
@@ -260,13 +260,15 @@ strong {
 }
 
 .alojamiento {
-  max-width: 800px;
+  width: 100%;
+  max-width: 650px;
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
 }
 
 .alojamiento button {
+  margin: 8px;
   display: inline-block;
   padding: 10px 20px;
   font-size: 1em;
