--- a/src/App.css
+++ b/src/App.css
@@ -70,12 +70,12 @@ img {
 }
 
 .authcontainer {
+  width: 100%;
   text-align: center;
   background-color: #1a1a1a;
   color: white;
   padding: 20px;
   border-radius: 10px;
-  width: 400px;
   margin: auto;
   margin-top: 50px;
 }
