--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,8 @@ img {
 }
 
 .authcontainer {
+  align-self: center;
+  position: relative;
   width: 100%;
   text-align: center;
   background-color: #1a1a1a;
@@ -81,16 +83,16 @@ img {
 }
 
 #loginform {
+  margin: auto;
+  position: relative;
   display: block;
   width: calc(100% - 20px);
-  margin: 10px auto;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
 #loginform p {
-  position: relative;
   top: -8px;
   text-align: center;
   height: 3px;
