--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,7 @@ img {
 
 .authcontainer {
   position: relative;
+  margin: 0 auto;
   max-width: 400px;
   width: 100%;
   text-align: center;
@@ -394,7 +395,7 @@ strong {
 }
 
 .carousel-container {
-  width: 80%;
+  width: 300px;
   /* Ajusta el ancho según sea necesario */
   margin: 0 auto;
   /* Centra el carrusel */
@@ -410,21 +411,4 @@ strong {
 .carousel-image {
   width: 100%;
   height: auto;
-}
-
-.slick-prev,
-.slick-next {
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 1;
-}
-
-.slick-prev {
-  left: 10px;
-  /* Ajusta según sea necesario */
-}
-
-.slick-next {
-  right: 10px;
-  /* Ajusta según sea necesario */
 }
