Todos los useState() implementados correctamente

--- a/src/App.css
+++ b/src/App.css
@@ -446,6 +446,7 @@ strong {
 
 .crear-alojamiento-form input[type="checkbox"] {
   margin-right: 10px;
+  margin-bottom: 15px;
 }
 
 .crear-alojamiento-form button {
