--- a/src/App.css
+++ b/src/App.css
@@ -209,7 +209,7 @@ strong {
   text-align: center;
 }
 
-.alojamientos-item img {
+.alojamientos-item ImageCarousel {
   width: 100%;
   height: 200px;
   object-fit: cover;
