--- a/src/App.css
+++ b/src/App.css
@@ -330,7 +330,14 @@ strong {
   font-family: Arial, sans-serif;
 }
 
-.alojamiento button {
+.imgcarousel {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.reservar-button {
   margin: 8px;
   display: inline-block;
   padding: 10px 20px;
@@ -342,7 +349,7 @@ strong {
   cursor: pointer;
 }
 
-.alojamiento button:hover {
+.reservar-button:hover {
   background-color: #0056b3;
 }
 
