--- a/src/App.css
+++ b/src/App.css
@@ -379,7 +379,11 @@ strong {
   align-items: center;
 }
 
-.reservadetalles button {
+.reservadetalles strong {
+  margin-top: 20px;
+}
+
+.eliminar-reserva-btn {
   display: inline-block;
   /* Make the button an inline-block element */
   padding: 10px 20px;
@@ -400,7 +404,7 @@ strong {
   /* Add a smooth hover effect */
 }
 
-.reservadetalles button:hover {
+.eliminar-reserva-btn button:hover {
   background-color: #0056b3;
   /* Change background color on hover */
 }
