--- a/src/App.css
+++ b/src/App.css
@@ -353,6 +353,14 @@ strong {
   background-color: #0056b3;
 }
 
+.reservas-component {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
 .reservas {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
