--- a/src/App.css
+++ b/src/App.css
@@ -199,17 +199,16 @@ strong {
 .alojamientos {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 1rem;
+  grid-gap: 100px;
   list-style-type: none;
 }
 
 .alojamientos-item {
-  padding: 10px;
   border-radius: 10px;
   text-align: center;
 }
 
-.alojamientos-item ImageCarousel {
+.alojamientos-item img {
   width: 100%;
   height: 200px;
   object-fit: cover;
@@ -328,13 +327,6 @@ strong {
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
-}
-
-.imgcarousel {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 10px;
 }
 
 .reservar-button {
