--- a/src/App.css
+++ b/src/App.css
@@ -198,12 +198,13 @@ strong {
 
 .alojamientos {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 100px;
   list-style-type: none;
 }
 
 .alojamientos-item {
+  margin: 10px;
   border-radius: 10px;
   text-align: center;
 }
