--- a/src/App.css
+++ b/src/App.css
@@ -345,7 +345,7 @@ strong {
 
 .reservas {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, 1fr);
   gap: 1rem;
   list-style-type: none;
 }
