--- a/src/App.css
+++ b/src/App.css
@@ -198,7 +198,7 @@ strong {
 
 .alojamientos {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 100px;
   list-style-type: none;
 }
@@ -345,7 +345,7 @@ strong {
 
 .reservas {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 1rem;
   list-style-type: none;
 }
