--- a/src/App.css
+++ b/src/App.css
@@ -212,7 +212,7 @@ strong {
 .alojamientos-item img {
   width: 100%;
   height: 200px;
-  object-fit: cover;
+  object-fit: fill;
   border-radius: 10px;
 }
 
