--- a/src/App.css
+++ b/src/App.css
@@ -198,7 +198,7 @@ strong {
 
 .alojamientos {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   grid-gap: 100px;
   list-style-type: none;
 }
@@ -346,7 +346,7 @@ strong {
 .reservas {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 1rem;
+  gap: 40px;
   list-style-type: none;
 }
 
